fixing gap between logos on TechnologyPage

--- a/src/pages/technology.module.scss
+++ b/src/pages/technology.module.scss
@@ -146,7 +146,7 @@
 			&__container {
 				display: grid;
 				justify-items: center;
-				grid-row-gap: .5rem;
+				grid-row-gap: 1rem;
 				padding: rem(50px) 0;
 				max-width: rem(924px);
 				margin: auto;
@@ -247,10 +247,10 @@
 					max-width: rem(864px);
 					justify-items: center;
 					margin: auto;
-					grid-row-gap: 0;
+					grid-row-gap: 1rem;
 
 					&__row {						
-						grid-column-gap: 0; 
+						grid-column-gap: 1rem; 
 						@include respond-to("<=m") {
 							max-width: 672px;
 						}	
